--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gsap": "^3.14.2",
     "howler": "^2.2.4",
     "lucide-react": "^0.378.0",
-    "next": "15.1.3",
+    "next": "^16.1.6",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "7.1.0",
     "react": "^19.0.0",
